src/scss/blog_post.scss
@use "mixins";

body {
    gap: 0;

    >header {
        background-color: var(--accent);
    }

    >main {
        width: 100%;
        margin: 0;
        max-width: 100%;
    }
}

.blog-post {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    // gap: 4rem;
    overflow-wrap: break-word;
    word-wrap: break-word;
    width: 100%;

    >header {
        @include mixins.reverse-accent;

        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        text-align: center;

        >section {
            padding: 0 1rem .5rem 1rem;
            display: flex;
            flex-direction: column;
            gap: .5rem;
            justify-content: center;
            align-items: center;

            >h1 {
                font-family: "Instrument Serif", "Instrument Serif Fallback", Georgia, 'Times New Roman', serif;
                font-size: 4em;
                font-weight: normal;
            }

            >section {
                display: flex;
                gap: 1rem;
                flex-wrap: wrap;
                align-items: center;
                justify-content: center;

                >h2 {
                    font-weight: normal;

                    >span {
                        @include mixins.reverse-reverse-accent;
                    }
                }

                >span {
                    font-family: 'Adwaita Mono', monospace;
                }

                >.blog-tags {
                    display: flex;
                    flex-direction: row;
                    gap: 1rem;
                    flex-wrap: wrap;
                }
            }
        }

        .music {
            &[open] {
                flex-basis: 100%;
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;
            }

            >summary {
                cursor: pointer;
                list-style: none;

                >img {
                    image-rendering: pixelated;
                    object-fit: contain;
                    width: 16px;
                    max-height: 16px;
                }
            }

            .card {
                width: 512px;
                max-width: 90vw;

                iframe {
                    border: 0;
                    width: 100%;
                    height: 120px;
                }
            }
        }
    }

    >section {
        font-size: large;
        margin: 110px 2rem;
        align-self: center;
        max-width: 100%;

        @media only screen and (min-width: 768px) {
            font-size: large;
            margin: 110px 6rem;
            max-width: 50rem;
        }

        >.card,
        >p:has(>img:last-child) {
            &:first-child {
                margin-top: calc(-110px / 2);
            }

            &:last-child {
                margin-bottom: calc(-110px / 2);
            }
        }

        >h2:first-child,
        >p:first-child {
            margin-top: 0;
        }

        >p:last-child {
            margin-bottom: 0;
        }

        .card {
            margin: 2rem 0;

            >section p {
                line-height: 1.3;
                margin: 0;

                a {
                    font-weight: normal;
                }
            }
        }

        img:not(.c) {
            max-width: 100%;
            max-height: 100%;
            display: block;
            margin-left: auto !important;
            margin-right: auto !important;

            &.emote {
                filter: drop-shadow(1px 1px 0px var(--accent)) drop-shadow(-1px -1px 0px var(--accent));
            }
        }

        h1,
        h2,
        h3,
        h4,
        h5,
        h6,
        p,
        img {
            margin: 1rem 0rem;
        }

        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
            margin-top: 2em;
            font-variation-settings: "wght" 900, "slnt" 0;
            font-weight: 900;

            >.anchor {
                font-weight: 900;
                text-decoration: none;
                margin-right: 1rem;
                // color: var(--accent);
                color: var(--accent-color);
                text-decoration: solid 1px underline var(--accent);
            }
        }

        p {
            line-height: 1.5;
        }

        ul>*,
        ol>* {
            margin: .5rem 0rem;
        }

        ul {
            list-style: inside;
        }

        :not(pre)>code {
            @include mixins.reverse-accent;

            white-space: normal;
            padding: 0rem .3rem;
        }

        figure {
            text-align: center;
            font-style: italic;
            font-size: smaller;
            margin: 0.5em;
            padding: 0.5em;
            border: 1px solid var(--accent);
        }

        img {
            pointer-events: all;
        }

        // figure img:not(.emote),
        // p img:not(.emote),
        // video,
        // .youtube img {
        //     border-radius: var(--radius-small);
        // }

        figure img:not(.emote),
        p img:not(.emote) {
            outline: 1px var(--accent) solid;
        }

        .youtube {
            img {
                transition-duration: 200ms;
            }

            &:hover img {
                transform: scale(1.2);
                outline: none;
                box-shadow: var(--focus-outline);
            }
        }

        pre {
            --theme-multiplier: 1;

            @media (prefers-color-scheme: dark) {
                --theme-multiplier: 2;
            }

            white-space: pre;
            overflow-x: auto;
            background-color: var(--background-color);
            border: 1px solid hsl(from var(--theme-bg) h calc(s * 0.814 * var(--theme-multiplier)) calc(l * 0.814 * var(--theme-multiplier)));
            border-radius: 2.4px;

            >code {
                max-width: 0; // hack else overflows
                display: inline-block;
                margin: 1rem 1rem 1rem 0;
            }
        }

        blockquote {
            font-style: italic;
        }
    }
}

